[1] Add view on mobile, fix layout for mobile

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -7,8 +7,8 @@
   z-index: -1;
   filter: brightness(0.6);
   overflow: hidden;
-  max-width: 100vw;
-  max-height: 100vh;
+  max-width: 100svw;
+  max-height: 100svh;
 }
 
 .hero-img {
