--- a/src/components/Section/Section.scss
+++ b/src/components/Section/Section.scss
@@ -23,7 +23,7 @@
   .bg-image {
     position: relative;
     width: 100%;
-    height: 100vh;
+    height: 100svh;
     background-image: url('../../assets/img/test.png');
     background-size: cover;
     background-position: center;
@@ -37,6 +37,7 @@
     justify-content: center;
     color: $white;
     flex-direction: column;
+    pointer-events: none;
   }
 }
 
@@ -76,5 +77,10 @@
   .img-container img {
     width: 100%;
     height: 400px;
+  }
+  #screens {
+    .bg-image {
+      background-attachment: scroll;
+    }
   }
 }
